modeified header header-white footer layout and added laser and 3d print

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -13,20 +13,19 @@
                         <div class="dropdown-content js--dropdown-content-services">
                           <div class="row">
                             <div class="column">
-                              <a href="#">3d printing(FDM)</a>
-                              <a href="#">3d printing(sls)</a>
+                              <a href="/3dprinting">3d printing</a>
+                              <a href="#">plastic moulding machine</a>
                               <a href="#">plasma cutting machine(upto 12mm)</a>
                             </div>
                             <div class="column">
-                              <a href="#">laser fiber engravity &amp; cutting</a>
-                              <a href="#">laser marking(metal)</a>
+                              <a href="/laser">laser fiber engravity &amp; cutting</a>
+                              <a href="/laser">laser marking(metal)</a>
                               <a href="#">pcb manufacturing</a>
                             </div>
                             <div class="column">
                               <a href="#">pcb soldering</a>
                               <a href="#">pcb designing</a>
                               <a href="#">project building</a>
-                             <a href="#">plastic moulding machine</a>
                             </div>
                           </div>
                         </div>
