--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="/css/login.css">
 <section class="section-start-recogniser section-login container-fluid">
         <form action="/users/create" method="POST" class="row" id="formConatainer">
             <div id="loginText"><h1>Sign up</h1></div> 
@@ -37,6 +38,7 @@
         </form>
     </div>
 </section>
+<script src="/js/signup.js"></script>
         
 
 
