--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="/css/login.css">
 <section class="section-start-recogniser section-login container-fluid">
         <form action="/users/create-session" method="POST" class="row" id="formConatainer">
             <div id="loginText"><h1>Login</h1></div> 
